crates/servicepoint_binding_uniffi/libraries/python/servicepoint_binding_uniffi.py

_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_cp437grid_get.argtypes = (
    ctypes.c_void_p,
    ctypes.c_uint64,
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_cp437grid_get.restype = ctypes.c_uint8
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_cp437grid_height.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_cp437grid_height.restype = ctypes.c_uint64
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_cp437grid_set.argtypes = (
    ctypes.c_void_p,
    ctypes.c_uint64,
    ctypes.c_uint64,
    ctypes.c_uint8,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_cp437grid_set.restype = None
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_cp437grid_width.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_cp437grid_width.restype = ctypes.c_uint64
_UniffiLib.ffi_servicepoint_binding_uniffi_rustbuffer_alloc.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rustbuffer_alloc.restype = _UniffiRustBuffer
_UniffiLib.ffi_servicepoint_binding_uniffi_rustbuffer_from_bytes.argtypes = (
    _UniffiForeignBytes,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rustbuffer_from_bytes.restype = _UniffiRustBuffer
_UniffiLib.ffi_servicepoint_binding_uniffi_rustbuffer_free.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rustbuffer_free.restype = None
_UniffiLib.ffi_servicepoint_binding_uniffi_rustbuffer_reserve.argtypes = (
    _UniffiRustBuffer,
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rustbuffer_reserve.restype = _UniffiRustBuffer
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_poll_u8.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_poll_u8.restype = None
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_cancel_u8.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_cancel_u8.restype = None
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_free_u8.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_free_u8.restype = None
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_complete_u8.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_complete_u8.restype = ctypes.c_uint8
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_poll_i8.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_poll_i8.restype = None
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_cancel_i8.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_cancel_i8.restype = None
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_free_i8.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_free_i8.restype = None
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_complete_i8.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_complete_i8.restype = ctypes.c_int8
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_poll_u16.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_poll_u16.restype = None
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_cancel_u16.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_cancel_u16.restype = None
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_free_u16.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_free_u16.restype = None
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_complete_u16.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_complete_u16.restype = ctypes.c_uint16
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_poll_i16.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_poll_i16.restype = None
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_cancel_i16.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_cancel_i16.restype = None
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_free_i16.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_free_i16.restype = None
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_complete_i16.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_complete_i16.restype = ctypes.c_int16
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_poll_u32.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_poll_u32.restype = None
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_cancel_u32.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_cancel_u32.restype = None
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_free_u32.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_free_u32.restype = None
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_complete_u32.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_complete_u32.restype = ctypes.c_uint32
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_poll_i32.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_poll_i32.restype = None
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_cancel_i32.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_cancel_i32.restype = None
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_free_i32.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_free_i32.restype = None
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_complete_i32.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_complete_i32.restype = ctypes.c_int32
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_poll_u64.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_poll_u64.restype = None
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_cancel_u64.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_cancel_u64.restype = None
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_free_u64.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_free_u64.restype = None
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_complete_u64.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_complete_u64.restype = ctypes.c_uint64
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_poll_i64.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_poll_i64.restype = None
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_cancel_i64.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_cancel_i64.restype = None
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_free_i64.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_free_i64.restype = None
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_complete_i64.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_complete_i64.restype = ctypes.c_int64
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_poll_f32.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_poll_f32.restype = None
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_cancel_f32.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_cancel_f32.restype = None
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_free_f32.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_free_f32.restype = None
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_complete_f32.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_complete_f32.restype = ctypes.c_float
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_poll_f64.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_poll_f64.restype = None
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_cancel_f64.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_cancel_f64.restype = None
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_free_f64.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_free_f64.restype = None
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_complete_f64.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_complete_f64.restype = ctypes.c_double
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_poll_pointer.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_poll_pointer.restype = None
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_cancel_pointer.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_cancel_pointer.restype = None
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_free_pointer.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_free_pointer.restype = None
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_complete_pointer.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_complete_pointer.restype = ctypes.c_void_p
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_poll_rust_buffer.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_poll_rust_buffer.restype = None
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_cancel_rust_buffer.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_cancel_rust_buffer.restype = None
_UniffiLib.ffi_servicepoint_binding_uniffi_rust_future_free_rust_buffer.argtypes = (
    ctypes.c_uint64,
)
